refactor: new Angular control flow sintax

--- a/modules/auth/src/confirmPassword.page.html
+++ b/modules/auth/src/confirmPassword.page.html
@@ -5,10 +5,12 @@
         <ion-card-title color="primary">{{ 'IDEA_AUTH.CHANGE_THE_PASSWORD' | translate }}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p class="errorBox" *ngIf="errorMsg">
+        @if (errorMsg) {
+        <p class="errorBox">
           <b> {{ 'IDEA_AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
+        }
         <ion-item>
           <ion-label position="inline">
             <ion-icon name="person-circle" color="primary" />
