--- a/modules/auth/src/mfaChallenge.page.html
+++ b/modules/auth/src/mfaChallenge.page.html
@@ -6,10 +6,12 @@
         <ion-card-subtitle>{{ 'IDEA_AUTH.ENTER_OTP_CODE_I' | translate }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <p class="errorBox" *ngIf="errorMsg">
+        @if (errorMsg) {
+        <p class="errorBox">
           <b>{{ 'IDEA_AUTH.ERROR' | translate }}.</b>
           {{ errorMsg }}
         </p>
+        }
         <ion-item>
           <ion-label position="inline">
             <ion-icon name="key" color="primary" />
