--- a/modules/common/src/echo/echo.page.html
+++ b/modules/common/src/echo/echo.page.html
@@ -4,16 +4,21 @@
       <ion-img [src]="'assets/icons/icon-auth.svg'" />
       <ion-card-header>
         <ion-card-title>
-          <ion-icon color="success" name="checkmark" *ngIf="success === true" />
-          <ion-icon color="danger" name="close" *ngIf="success === false" />
+          @if (success === true) {
+          <ion-icon color="success" name="checkmark" />
+          } @if (success === false) {
+          <ion-icon color="danger" name="close" />
+          }
         </ion-card-title>
       </ion-card-header>
       <ion-card-content class="selectable">
-        {{ content }}
-        <div class="htmlContent" *ngIf="htmlContent" [innerHTML]="htmlContent"></div>
-        <p class="youCanCloseMe" *ngIf="success === false || success === true">
+        {{ content }} @if (htmlContent) {
+        <div class="htmlContent" [innerHTML]="htmlContent"></div>
+        } @if (success === false || success === true) {
+        <p class="youCanCloseMe">
           <i>{{ 'IDEA_COMMON.ECHO.YOU_CAN_CLOSE_THE_PAGE' | translate }}</i>
         </p>
+        }
       </ion-card-content>
     </ion-card>
   </div>
