--- a/modules/teams/src/teams/teams.page.html
+++ b/modules/teams/src/teams/teams.page.html
@@ -1,9 +1,11 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button *ngIf="aTeamIsSelected()" [title]="'COMMON.CLOSE' | translate" (click)="close()">
+      @if (aTeamIsSelected()) {
+      <ion-button [title]="'COMMON.CLOSE' | translate" (click)="close()">
         <ion-icon name="arrow-back" slot="icon-only" />
       </ion-button>
+      }
     </ion-buttons>
     <ion-title>{{ 'IDEA_TEAMS.TEAMS.SELECT_A_TEAM' | translate }}</ion-title>
     <ion-buttons slot="end">
@@ -15,13 +17,14 @@
 </ion-header>
 <ion-content>
   <ion-list lines="full" class="aList maxWidthContainer">
-    <ion-list-header *ngIf="!aTeamIsSelected()">
+    @if (!aTeamIsSelected()) {
+    <ion-list-header>
       <ion-label class="ion-text-center">
         <h2>{{ 'IDEA_TEAMS.TEAMS.YOU_NEED_A_TEAM_TO_CONTINUE' | translate }}</h2>
       </ion-label>
     </ion-list-header>
+    } @for (team of teams; track team) {
     <ion-item
-      *ngFor="let team of teams"
       [title]="'IDEA_TEAMS.TEAMS.SELECT_TEAM_' | translate: { team: team.name }"
       [button]="true"
       [disabled]="!teamIsActiveOnProject(team)"
@@ -29,22 +32,22 @@
     >
       <ion-label>
         <b>{{ team.name }}</b>
-        <p *ngIf="!teamIsActiveOnProject(team)">{{ 'IDEA_TEAMS.TEAMS.TEAM_NOT_ACTIVATED_DISCLAIMER' | translate }}</p>
-        <p *ngIf="team.activeInProjects.length">
-          {{ 'IDEA_TEAMS.TEAMS.ACTIVE_ON' | translate }}:
-          <ion-badge color="light" size="small" *ngFor="let p of team.activeInProjects">
-            {{ getProjectName(p) }}
-          </ion-badge>
+        @if (!teamIsActiveOnProject(team)) {
+        <p>{{ 'IDEA_TEAMS.TEAMS.TEAM_NOT_ACTIVATED_DISCLAIMER' | translate }}</p>
+        } @if (team.activeInProjects.length) {
+        <p>
+          {{ 'IDEA_TEAMS.TEAMS.ACTIVE_ON' | translate }}: @for (p of team.activeInProjects; track p) {
+          <ion-badge color="light" size="small"> {{ getProjectName(p) }} </ion-badge>
+          }
         </p>
+        }
       </ion-label>
-      <ion-badge
-        slot="end"
-        color="primary"
-        *ngIf="isCurrentTeam(team)"
-        [title]="'IDEA_TEAMS.TEAMS.CURRENT_TEAM_EXPLANATION' | translate"
-      >
+      @if (isCurrentTeam(team)) {
+      <ion-badge slot="end" color="primary" [title]="'IDEA_TEAMS.TEAMS.CURRENT_TEAM_EXPLANATION' | translate">
         {{ 'IDEA_TEAMS.TEAMS.CURRENT' | translate }}
       </ion-badge>
+      }
     </ion-item>
+    }
   </ion-list>
 </ion-content>
