feat: prepara idea ionic extra (modules)

--- a/modules/auth/src/confirmPassword.page.html
+++ b/modules/auth/src/confirmPassword.page.html
@@ -6,7 +6,7 @@
       </ion-card-header>
       <ion-card-content>
         @if (errorMsg) {
-        <p class="errorBox">
+        <p testId="confirmpassword.error" class="errorBox">
           <b> {{ 'IDEA_AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
@@ -16,6 +16,7 @@
             <ion-icon name="person-circle" color="primary" />
           </ion-label>
           <ion-input
+            testId="confirmpassword.email"
             type="email"
             inputmode="email"
             pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z-_.]{2,}[.]{1}[a-zA-Z]{2,}"
@@ -34,6 +35,7 @@
             <ion-icon name="disc" color="primary" />
           </ion-label>
           <ion-input
+            testId="confirmpassword.code"
             type="text"
             spellcheck="false"
             autocorrect="off"
@@ -50,6 +52,7 @@
             <ion-icon name="key" color="primary" />
           </ion-label>
           <ion-input
+            testId="confirmpassword.password"
             type="password"
             spellcheck="false"
             autocorrect="off"
@@ -62,11 +65,18 @@
             [(ngModel)]="newPassword"
             (keyup.enter)="confirmPassword()"
           />
-          <ion-button slot="end" fill="clear" color="dark" (click)="openPasswordPolicy($event)">
+          <ion-button
+            testId="openPasswordPolicyButton"
+            slot="end"
+            fill="clear"
+            color="dark"
+            (click)="openPasswordPolicy($event)"
+          >
             <ion-icon icon="help-circle-outline" slot="icon-only" />
           </ion-button>
         </ion-item>
         <ion-button
+          testId="changePasswordButton"
           expand="block"
           [title]="'IDEA_AUTH.CHANGE_MY_PASSWORD_HINT' | translate"
           (click)="confirmPassword()"
@@ -74,6 +84,7 @@
           {{ 'IDEA_AUTH.CHANGE_MY_PASSWORD' | translate }}
         </ion-button>
         <ion-button
+          testId="haventReceivedResetCodeButton"
           fill="clear"
           expand="block"
           class="smallCaseButton"
@@ -83,6 +94,7 @@
           {{ 'IDEA_AUTH.HAVEN_T_RECEIVED_A_RESET_CODE' | translate }}
         </ion-button>
         <ion-button
+          testId="backToSignInButton"
           fill="clear"
           expand="block"
           class="smallCaseButton"
