--- a/modules/auth/src/forgotPassword.page.html
+++ b/modules/auth/src/forgotPassword.page.html
@@ -11,6 +11,7 @@
             <ion-icon name="person-circle" color="primary" />
           </ion-label>
           <ion-input
+            testId="forgotpassword.email"
             type="email"
             inputmode="email"
             pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z-_.]{2,}[.]{1}[a-zA-Z]{2,}"
@@ -24,10 +25,16 @@
             (keyup.enter)="forgotPassword()"
           />
         </ion-item>
-        <ion-button expand="block" [title]="'IDEA_AUTH.RESET_MY_PASSWORD_HINT' | translate" (click)="forgotPassword()">
+        <ion-button
+          testId="resetPasswordButton"
+          expand="block"
+          [title]="'IDEA_AUTH.RESET_MY_PASSWORD_HINT' | translate"
+          (click)="forgotPassword()"
+        >
           {{ 'IDEA_AUTH.RESET_MY_PASSWORD' | translate }}
         </ion-button>
         <ion-button
+          testId="insertResetCodeButton"
           fill="clear"
           expand="block"
           class="smallCaseButton"
@@ -37,6 +44,7 @@
           {{ 'IDEA_AUTH.ALREADY_HAVE_A_RESET_CODE' | translate }}
         </ion-button>
         <ion-button
+          testId="backToSignInButton"
           fill="clear"
           expand="block"
           class="smallCaseButton"
