--- a/modules/auth/src/mfaChallenge.page.html
+++ b/modules/auth/src/mfaChallenge.page.html
@@ -7,7 +7,7 @@
       </ion-card-header>
       <ion-card-content>
         @if (errorMsg) {
-        <p class="errorBox">
+        <p testId="mfachallenge.error" class="errorBox">
           <b>{{ 'IDEA_AUTH.ERROR' | translate }}.</b>
           {{ errorMsg }}
         </p>
@@ -17,6 +17,7 @@
             <ion-icon name="key" color="primary" />
           </ion-label>
           <ion-input
+            testId="mfachallenge.otpcode"
             inputmode="numeric"
             [placeholder]="'IDEA_AUTH.OTP_CODE' | translate"
             [title]="'IDEA_AUTH.ENTER_OTP_CODE' | translate"
@@ -26,6 +27,7 @@
           />
         </ion-item>
         <ion-button
+          testId="confirmOTPCodeButton"
           expand="block"
           [title]="'IDEA_AUTH.CONFIRM_OTP_CODE_HINT' | translate"
           (click)="completeMFAChallenge()"
@@ -33,6 +35,7 @@
           {{ 'IDEA_AUTH.CONFIRM_OTP_CODE' | translate }}
         </ion-button>
         <ion-button
+          testId="backToSignInButton"
           fill="clear"
           expand="block"
           class="smallCaseButton"
