--- a/modules/auth/src/resendLink.page.html
+++ b/modules/auth/src/resendLink.page.html
@@ -7,7 +7,7 @@
       </ion-card-header>
       <ion-card-content>
         @if (errorMsg) {
-        <p class="errorBox">
+        <p testId="resendlink.error" class="errorBox">
           <b> {{ 'IDEA_AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
@@ -17,6 +17,7 @@
             <ion-icon name="person-circle" color="primary" />
           </ion-label>
           <ion-input
+            testId="resendlink.email"
             type="email"
             inputmode="email"
             pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z-_.]{2,}[.]{1}[a-zA-Z]{2,}"
@@ -31,6 +32,7 @@
           />
         </ion-item>
         <ion-button
+          testId="resendLinkButton"
           expand="block"
           [title]="'IDEA_AUTH.RESEND_LINK_HINT' | translate"
           (click)="resendConfirmationLink()"
@@ -38,6 +40,7 @@
           {{ 'IDEA_AUTH.RESEND_LINK' | translate }}
         </ion-button>
         <ion-button
+          testId="backToSignInButton"
           fill="clear"
           expand="block"
           class="smallCaseButton"
