--- a/modules/auth/src/setupMfa.page.html
+++ b/modules/auth/src/setupMfa.page.html
@@ -6,8 +6,9 @@
         <ion-card-subtitle>{{ 'IDEA_AUTH.MFA_IS_MANDATORY' | translate }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <idea-setup-mfa-button (change)="reloadApp()" />
+        <idea-setup-mfa-button testId="setupMfaButton" (change)="reloadApp()" />
         <ion-button
+          testId="backToSignInButton"
           fill="clear"
           expand="block"
           class="smallCaseButton"
