--- a/modules/auth/src/newPassword.page.html
+++ b/modules/auth/src/newPassword.page.html
@@ -7,7 +7,7 @@
       </ion-card-header>
       <ion-card-content>
         @if (errorMsg) {
-        <p class="errorBox">
+        <p testId="newpassword.error" class="errorBox">
           <b> {{ 'IDEA_AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
@@ -17,6 +17,7 @@
             <ion-icon name="key" color="primary" />
           </ion-label>
           <ion-input
+            testId="newpassword.password"
             type="password"
             spellcheck="false"
             autocorrect="off"
@@ -29,11 +30,18 @@
             [(ngModel)]="newPassword"
             (keyup.enter)="confirmNewPassword()"
           />
-          <ion-button slot="end" fill="clear" color="dark" (click)="openPasswordPolicy($event)">
+          <ion-button
+            testId="openPasswordPolicyButton"
+            slot="end"
+            fill="clear"
+            color="dark"
+            (click)="openPasswordPolicy($event)"
+          >
             <ion-icon icon="help-circle-outline" slot="icon-only" />
           </ion-button>
         </ion-item>
         <ion-button
+          testId="confirmNewPaswordButton"
           expand="block"
           [title]="'IDEA_AUTH.CONFIRM_NEW_PASSWORD_HINT' | translate"
           (click)="confirmNewPassword()"
@@ -41,6 +49,7 @@
           {{ 'IDEA_AUTH.CONFIRM_NEW_PASSWORD' | translate }}
         </ion-button>
         <ion-button
+          testId="backToSignInButton"
           fill="clear"
           expand="block"
           class="smallCaseButton"
