--- a/modules/teams/src/account/account.page.html
+++ b/modules/teams/src/account/account.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button [title]="'COMMON.CLOSE' | translate" (click)="close()">
+      <ion-button testId="closeButton" [title]="'COMMON.CLOSE' | translate" (click)="close()">
         <ion-icon name="arrow-back" slot="icon-only" />
       </ion-button>
     </ion-buttons>
@@ -12,6 +12,7 @@
   <ion-list lines="full" class="account">
     <ion-item>
       <ion-input
+        testId="account.email"
         type="text"
         readonly="true"
         labelPlacement="stacked"
@@ -19,6 +20,7 @@
         [(ngModel)]="newEmail"
       />
       <ion-button
+        testId="setNewEmailButton"
         slot="end"
         fill="clear"
         class="marginTop"
@@ -30,6 +32,7 @@
     </ion-item>
     <ion-item>
       <ion-input
+        testId="account.password"
         type="text"
         readonly="true"
         value="********"
@@ -37,6 +40,7 @@
         [label]="'IDEA_TEAMS.ACCOUNT.PASSWORD' | translate"
       />
       <ion-button
+        testId="setNewPasswordButton"
         slot="end"
         fill="clear"
         class="marginTop"
@@ -61,6 +65,7 @@
         </p>
       </ion-label>
       <ion-button
+        testId="deleteUserButton"
         slot="end"
         color="danger"
         [title]="'IDEA_TEAMS.ACCOUNT.DELETE_PERMANENTLY_USER' | translate"
