--- a/modules/teams/src/teams/teams.page.html
+++ b/modules/teams/src/teams/teams.page.html
@@ -2,14 +2,18 @@
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       @if (aTeamIsSelected()) {
-      <ion-button [title]="'COMMON.CLOSE' | translate" (click)="close()">
+      <ion-button testId="closeButton" [title]="'COMMON.CLOSE' | translate" (click)="close()">
         <ion-icon name="arrow-back" slot="icon-only" />
       </ion-button>
       }
     </ion-buttons>
     <ion-title>{{ 'IDEA_TEAMS.TEAMS.SELECT_A_TEAM' | translate }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button [title]="'IDEA_TEAMS.ACCOUNT.MANAGE_YOUR_ACCOUNT_HINT' | translate" (click)="openAccount()">
+      <ion-button
+        testId="manageAccountButton"
+        [title]="'IDEA_TEAMS.ACCOUNT.MANAGE_YOUR_ACCOUNT_HINT' | translate"
+        (click)="openAccount()"
+      >
         <ion-icon name="person" slot="icon-only" />
       </ion-button>
     </ion-buttons>
